2009-04-01  Jeremie Dimino <jeremie@dimino.org>

	* src/core/extlib/option.ml: fix t_printer

2009-03-31  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* configure.ac: [gnome-open] replaced by [x-www-browser]

	* Makefile.in: [all] now depends on [install-doc] rather than [install_doc]
	
	* src/core/extlib/extPervasives.ml*: [maybe_printer]

	* src/core/extlib/option.ml*: [maybe_printer]

	* src/core/extlib/print.mli: Further savage documentation spree.

	* src/core/extlib/value_printer.mli: typo

	* build/odoc_tags.ml: [INCLUDE "doc_batteries_factored.ml"]

	* src/main/nothreads/batteries.mllib: [Lexing] removed

	* src/main/threads/batteries.mllib: [Lexing] removed

	* README: added subsections

	* src/core/extlib/print.ml*: [iprintf] added

	* src/core/extlib/print.mli: intense documentation

	* examples/tools/conv.ml: now using [Print] rather than [Printf]

	* src/core/extlib/extPrintf.mli: deprecated

2009-03-30  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extPervasives.mli: [sexp_of_result], [result_of_sexp] added

	* src/core/extlib/std.ml: [sexp_of_result], [result_of_sexp] added
	
	* src/core/extlib/std.ml: [result] now [with sexp]

2009-03-26  Jeremie Dimino <jeremie@dimino.org>

	* src/core/extlib/print.ml*: remove this annoying and useless
     	third type parameter of [Print.directive]

2009-03-25  Jeremie Dimino <jeremie@dimino.org>

	* src/core/extlib/value_printer.ml*: added

	* src/core/extlib/extPervasives.ml*: added value printers

	* src/syntax/pa_strings/pa_format.ml: handle value printers

2009-03-25  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/seq.ml*: [Failure] replaced with [Invalid_argument]

	* src/core/extlib/extInt.ml: [SafeInt.mul] rewritten without need for native integersx

2009-03-24  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extPervasives.ml: [printer_S] now uses [String.quote]
