@@ -1,3 +1,7 @@
+2009-04-15  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
+
+	* src/core/extlib/extString.ml: [find_from], [rfind_from] now raise [Invalid_string] if string is empty
+
 2009-04-01  Jeremie Dimino <jeremie@dimino.org>
 
 	* src/core/extlib/option.ml: fix t_printer
